--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
-.min-height{
-    min-height: 100vh;
+*{
+    box-sizing: border-box;
+}
+
+
+
+
+
+/* Sección footer */
+.footer-clase{
+    background-color: #36504F;
+    color: white;
+    bottom: 0;
+}
+
+.redes{
+    text-decoration: none;
+    color: white;
 }
