--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: 'Gotham';
+    src: url(./assets/fonts/FontsFree-Net-gotham-ultra.ttf);
+}
 
 
 
