--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,12 @@
     background-color: #36504F;
     color: white;
     bottom: 0;
+    width: 100%;
+    position: fixed;
 }
 
 .redes{
     text-decoration: none;
     color: white;
 }
+
