Se agregó un modal y se puede hacer un post a la api para agregar un menu en la base de datos

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@
     font-family: 'Gotham';
     src: url(./assets/fonts/FontsFree-Net-gotham-ultra.ttf);
 }
-
+.min-height {
+    min-height: 70vh;
+}
 
 /* Sección administración */
 .bg{
