--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+:root{
+  --verdeOsc: #36504F;
+  --verdeM: #5E8886;
+  --verdeC: #88B4B2;
+  --salmon: #fdc9a6;
+
+}
+.inicioBackground{
+  width: 100vw;
+  background-color: #36504f98;
+  
+}
 #botonPedStick{
     position: fixed;
     bottom: 30px;
@@ -8,10 +20,33 @@
     height: 60px;
     
 }
+  /*-----------Estilo cards Categorias----------------*/
+  .cardLink{
+    text-decoration: none;
+    color: var(--verdeOsc);
+    text-align: center;
+  
+  }
 
+  .cardLink h5{
+    font-weight: 700;
+  }
+
+  .cardCateg{
+    border-radius:5%;
+    width: 80vw;
+  }
+.contImgC{
+  background: linear-gradient(to right top, var(--salmon), var(--verdeM), #fcc098, var(--verdeOsc), #2d142c);
+  border-radius: 5%;
+}
+.imgC{
+  padding: 5px;
+  border-radius: 6%;
+}
 /*-----------Estilo cards menu----------------*/
 .botonAgr{
-  background-color:#ce3000;
+  background-color: var(--verdeOsc);
   color: white;
   border:none;
 
@@ -80,4 +115,4 @@
   }
   
   
-  
+
