--- a/src/index.css
+++ b/src/index.css
@@ -142,4 +142,16 @@
     font-weight: 500;
   }
   
-  
+  /*----Estilo Carrusel continentes------*/
+  .cardCont{
+    border-radius:3%;
+    width: 70vw;
+    height: 40vh;
+    display: block;
+    margin: 3%;
+
+  }
+  .carruselCont{
+    align-items: center;
+    justify-content: space-evenly;
+  }
