--- a/src/index.css
+++ b/src/index.css
@@ -98,11 +98,7 @@
   .cardCateg:hover{
     transform: scale(1.05);
   }
-.contImgC{
-  background: linear-gradient(to right top, var(--salmon), var(--verdeM), #fcc098, var(--verdeOsc));
-  border-radius: 5%;
-  width: 70vw;
-}
+
 .imgC{
   padding: 5px;
   border-radius: 6%;
@@ -187,7 +183,12 @@
     height: 40vh;
     display: block;
     margin: 3%;
-
+    min-height: auto;
+  }
+  .contImgC{
+    background-color: whitesmoke;
+    border-radius: 5%;
+    width: 70vw;
   }
   .cardCont img{
     width: 100%;
