falta boton en mozo agrego error404

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 :root {
   --verdeOsc: #36504f;
   --verdeM: #5e8886;
@@ -77,17 +76,17 @@
   text-shadow: rgb(168, 168, 168) 0.1em 0.1em 0.2em;
 }
 
-  .cardCateg{
-    border-radius:5%;
-    width: 80vw;
-    transition-property: transform;
-    transition-duration: 0.5s;
-  }
-  .cardCateg:hover{
-    transform: scale(1.05);
-  }
+.cardCateg {
+  border-radius: 5%;
+  width: 80vw;
+  transition-property: transform;
+  transition-duration: 0.5s;
+}
+.cardCateg:hover {
+  transform: scale(1.05);
+}
 
-.imgC{
+.imgC {
   padding: 5px;
   border-radius: 6%;
 }
@@ -174,6 +173,15 @@
   font-size: 18px;
   font-weight: 500;
 }
+/*tabla scroll*/
+.my-custom-scrollbar {
+  position: relative;
+  height: 200px;
+  overflow: auto;
+}
+.table-wrapper-scroll-y {
+  display: block;
+}
 
 /* /----Estilo Carrusel continentes------/ */
 .cardCont {
@@ -195,16 +203,16 @@
 }
 /* /LOGIN/ */
 .login-bg {
-  background-color: #5e8886;
+  background-color: var(--verdeM);
 }
 .login-card {
-  background-color: #36504f;
+  background-color: var(--verdeOsc);
   border-radius: 10px;
   padding: 5px 30px;
   font-family: "Montserrat";
 }
 .iniciaSesion {
-  text-shadow: 0.05em 0.07em #5e8886;
+  text-shadow: 0.05em 0.07em var(--verdeM);
   font-size: 1.4rem;
   color: white;
   font-family: "Gotham" !important;
@@ -218,14 +226,34 @@
   color: var(--verdeM);
 }
 .login-btn {
-  background-color: #5e8886;
+  background-color: var(--verdeM);
   border: none;
 }
 .login-btn:hover {
   background-color: rgb(167, 211, 164);
   color: #273837;
   border: none;
-  text-shadow: 0.05em 0.07em #5e8886;
+  text-shadow: 0.05em 0.07em var(--verdeM);
+}
+/*ERROR page*/
+.body {
+  background: linear-gradient(
+      to bottom,
+      rgba(230, 224, 224, 0.8) 0%,
+      rgba(92, 68, 52, 0.8) 100%
+    ),
+    url(https://images.pexels.com/photos/1092730/pexels-photo-1092730.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+.btnHome {
+  background-color: var(--verdeOsc);
+  color: white;
 }
 
 /* /------Media queries-------/ */
@@ -246,17 +274,17 @@
     padding: 5px;
     border-radius: 6%;
   }
-  
+
   /*----Estilo Carrusel continentes------*/
-  .cardCont{
-    border-radius:3%;
+  .cardCont {
+    border-radius: 3%;
     width: 60vw;
     height: 40vh;
     display: block;
     margin: 3%;
     min-height: auto;
   }
-  .contImgC{
+  .contImgC {
     background-color: whitesmoke;
     border-radius: 5%;
     width: 70vw;
