--- a/src/index.css
+++ b/src/index.css
@@ -185,23 +185,43 @@ flex-shrink: 1;
 
 /* /----Estilo Carrusel continentes------/ */
 .cardCont{
+  box-sizing: border-box ;
   border-radius:3%;
-  width: 60vw;
+  width: 100%;
   height: 40vh;
   display: block;
-  margin: 3%;
-  min-height: auto;
-}
-.contImgC{
-  background-color: whitesmoke;
-  border-radius: 5%;
-  width: 70vw;
+  object-fit: contain;
   justify-content: center;
+ 
+  min-height: auto;
+  border: solid 2px var(--verdeOsc);
+  transition-property: transform;
+  transition-duration: 0.5s;
+}
+.cardCont:hover{
+  transform: scale(1.03);
 }
 
-.imgC {
+.cardConti{
+box-sizing: border-box;
+object-fit: contain;
+overflow: hidden;
+}
+.cardCont img{
+  width: 90%;
+  height: 70%;
+}
+.nombreCont{
+  font-family: 'Montserrat';
+  text-decoration: none;
+  color: var(--verdeOsc) ;
+  font-weight: 700;
+}
+
+#imgCon {
   object-fit: contain;
-  width: 100%;
+  box-sizing: border-box;
+  width: 50vw;
   padding: 5px;
   border-radius: 6%;
 }
@@ -210,13 +230,10 @@ flex-shrink: 1;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  flex-shrink: 1;
+ 
 }
 
-.cardCont img {
-  width: 100%;
-  align-items: center;
-}
+
 .carruselCont {
   justify-content: center;
   display: flex;
@@ -321,4 +338,6 @@ flex-shrink: 1;
     margin-left: 0.7rem;
    }
  
+
+
 }
