--- a/src/components/common/navbar/navbar.css
+++ b/src/components/common/navbar/navbar.css
@@ -25,16 +25,18 @@
 
 .sidebar {
   z-index: 5;
-  display: none;
   position: fixed;
   width: 250px;
   top: 0;
-  background-color: #36504f;
+  background-color: #36504ff5;
   min-height: 100vh;
   transition: 0.4s;
+  animation-duration: 0.4s;
+  animation-name: mostrarSide;
 }
 .cerrado {
-  transition: 0.4s;
+  animation-duration: 0.4s;
+  animation-name: ocultarSide;
   left: -250px;
 }
 
@@ -44,12 +46,16 @@
 .toggle {
   transition: 0.4s;
   position: absolute;
-  display: none;
+  right: 0;
+  animation-duration: 0.4s;
+  animation-name: mostrar;
+  
 }
 .toggle-cerrado {
   position: absolute;
-  transition: 0.4s;
-  right: -40px;
+  animation-duration: 0.4s;
+  animation-name: ocultar;
+  right: -5rem;
 }
 .navB {
   padding: 0.6rem 0;
@@ -79,4 +85,113 @@
   }
 }
 
-/* ----------------------------------------- */
+
+@keyframes ocultar {
+  from {
+    right: 0
+  }
+
+  to {
+    right: -5rem;
+  }
+}
+@keyframes mostrar {
+  from {
+    right: -5rem
+  }
+
+  to {
+    right: 0;
+  }
+}
+
+@keyframes ocultarSide {
+  from {
+    left: 0
+  }
+
+  to {
+    left: -250px;
+  }
+}
+@keyframes mostrarSide {
+  from {
+    left: -250px
+  }
+
+  to {
+    left: 0px;
+  }
+}
+
+/* hamburguer */
+ .hamburger {
+  padding: 15px 15px;
+  display: inline-block;
+  cursor: pointer;
+  transition-property: opacity, filter;
+  transition-duration: 0.15s;
+  transition-timing-function: linear;
+  font: inherit;
+  color: inherit;
+  text-transform: none;
+  background-color: transparent;
+  border: 0;
+  margin: 0;
+  overflow: visible; }
+  .hamburger:hover {
+    opacity: 0.7; }
+  .hamburger.is-active:hover {
+    opacity: 0.7; }
+  .hamburger.is-active .hamburger-inner,
+  .hamburger.is-active .hamburger-inner::before,
+  .hamburger.is-active .hamburger-inner::after {
+    background-color: #fff; }
+
+.hamburger-box {
+  width: 40px;
+  height: 24px;
+  display: inline-block;
+  position: relative; }
+
+.hamburger-inner {
+  display: block;
+  top: 50%;
+  margin-top: -2px; }
+  .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+    width: 40px;
+    height: 4px;
+    background-color: #fff;
+    border-radius: 4px;
+    position: absolute;
+    transition-property: transform;
+    transition-duration: 0.4s;
+    transition-timing-function: ease; }
+  .hamburger-inner::before, .hamburger-inner::after {
+    content: "";
+    display: block; }
+  .hamburger-inner::before {
+    top: -10px; }
+  .hamburger-inner::after {
+    bottom: -10px; }
+
+   * Slider
+   */
+.hamburger--slider .hamburger-inner {
+  top: 2px; }
+  .hamburger--slider .hamburger-inner::before {
+    top: 10px;
+    transition-property: transform, opacity;
+    transition-timing-function: ease;
+    transition-duration: 0.15s; }
+  .hamburger--slider .hamburger-inner::after {
+    top: 20px; }
+
+.hamburger--slider.is-active .hamburger-inner {
+  transform: translate3d(0, 10px, 0) rotate(45deg); }
+  .hamburger--slider.is-active .hamburger-inner::before {
+    transform: rotate(-45deg) translate3d(-5.71429px, -6px, 0);
+    opacity: 0; }
+  .hamburger--slider.is-active .hamburger-inner::after {
+    transform: translate3d(0, -20px, 0) rotate(-90deg); }
+
