--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 :root {
   --verdeOsc: #36504f;
   --verdeM: #5e8886;
@@ -8,6 +7,7 @@
 * {
   box-sizing: border-box;
 }
+
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 @font-face {
   font-family: "Gotham";
@@ -62,12 +62,11 @@
   height: 60px;
 }
 /* /-----------Estilo cards Categorias----------------/ */
-.cardContainC{
+.cardContainC {
   display: flex;
- flex-direction: column;
-justify-content: space-around;
-flex-shrink: 1;
-
+  flex-direction: column;
+  justify-content: space-around;
+  flex-shrink: 1;
 }
 .cardLink {
   color: var(--verdeOsc);
@@ -77,39 +76,55 @@ flex-shrink: 1;
 .cardCatBod {
   align-content: center;
 }
- 
-  .cardLink h5{
-    font-weight: 700;
-    text-decoration: none;
-    
-    text-shadow: rgb(155, 154, 154) 0.1em 0.1em 0.2em
-  }
 
-.cardCateg{
-    border-radius:5%;
-    border: solid 2px var(--verdeOsc);
-    width: 80vw;
-    transition-property: transform;
-    transition-duration: 0.5s;
-  }
+.cardLink h5 {
+  font-weight: 700;
+  text-decoration: none;
 
-  .cardCateg:hover{
-    transform: scale(1.05);
-    box-shadow: rgb(112, 111, 111) 0.1em 0.2em 0.2em;
-    
-  }
+  text-shadow: rgb(155, 154, 154) 0.1em 0.1em 0.2em;
+}
 
-.imgC{
+.cardCateg {
+  border-radius: 5%;
+  border: solid 2px var(--verdeOsc);
+  width: 80vw;
+  transition-property: transform;
+  transition-duration: 0.5s;
+}
+
+.cardCateg:hover {
+  transform: scale(1.05);
+  box-shadow: rgb(112, 111, 111) 0.1em 0.2em 0.2em;
+}
+
+.imgC {
   padding: 5px;
   border-radius: 6%;
 }
 /* /-----------Estilo cards menu----------------/ */
+.continentBackground{
+  background: linear-gradient(
+    to bottom,
+    rgba(230, 224, 224, 0.8) 0%,
+    rgba(92, 68, 52, 0.8) 100%
+  ),
+  url(https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2000&q=80);
+background-repeat: no-repeat;
+background-position: center;
+background-attachment: fixed;
+
+background-size: cover;
+background-color: #5e8886a2;
+}
 .botonAgr {
   background-color: var(--verdeOsc);
   color: white;
   border: none;
-  bottom: 5vh;
- }
+
+  bottom: 20px;
+  right: 26%;
+}
+
 .botonAgrBa {
   color: var(--verdeOsc);
   background-color: white;
@@ -121,7 +136,6 @@ flex-shrink: 1;
   position: relative;
   transform-style: preserve-3d;
   perspective: 1000px;
-  
 }
 .wrapper .card {
   position: absolute;
@@ -141,7 +155,7 @@ flex-shrink: 1;
   transform: rotateY(-180deg);
 }
 .wrapper .card img {
- max-width: 100%;
+  max-width: 100%;
   max-height: 35vh;
   object-fit: contain;
   border-radius: 10px;
@@ -156,11 +170,14 @@ flex-shrink: 1;
   border-radius: 5%;
 }
 .wrapper .back-face {
+  overflow-y: scroll;
   display: flex;
+  font-size: 12px;
   align-items: center;
   justify-content: space-evenly;
   flex-direction: column;
   transform: rotateY(180deg);
+  object-fit: contain;
   background-color: var(--verdeM);
   color: white;
 }
@@ -191,9 +208,9 @@ flex-shrink: 1;
 }
 
 /* /----Estilo Carrusel continentes------/ */
-.cardConti{
-  box-sizing: border-box ;
-  border-radius:3%;
+.cardConti {
+  box-sizing: border-box;
+  border-radius: 3%;
   width: 100%;
   height: 40vh;
   display: block;
@@ -205,7 +222,7 @@ flex-shrink: 1;
   transition-property: transform;
   transition-duration: 0.5s;
 }
-.cardCont:hover{
+.cardCont:hover {
   transform: scale(1.03);
 }
 
@@ -214,18 +231,18 @@ box-sizing: border-box;
 object-fit: contain;
 overflow: hidden;
 } */
-.cardCont{
+.cardCont {
   max-height: 70%;
 }
-.cardCont img{
- width: 90%;
+.cardCont img {
+  width: 90%;
   max-height: 70%;
   padding: 2px;
 }
-.nombreCont{
-  font-family: 'Montserrat';
+.nombreCont {
+  font-family: "Montserrat";
   text-decoration: none;
-  color: var(--verdeOsc) ;
+  color: var(--verdeOsc);
   font-weight: 700;
 }
 
@@ -241,9 +258,7 @@ overflow: hidden;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
- 
 }
-
 
 .carruselCont {
   justify-content: center;
@@ -251,7 +266,6 @@ overflow: hidden;
   flex-grow: 0;
   justify-content: space-evenly;
 }
-
 
 /* /LOGIN/ */
 .login-bg {
@@ -288,81 +302,85 @@ overflow: hidden;
   text-shadow: 0.05em 0.07em #5e8886;
 }
 
-
-
 /*------Media queries-------*/
 @media (min-width: 576px) {
-  .cardCateg{
+  .cardCateg {
     display: flex;
     justify-content: center;
-    width:65vw;
+    width: 65vw;
   }
-  .contImgC{
-     width: 55vw;
+  .contImgC {
+    width: 55vw;
     top: 1vh;
     left: 3vw;
-    
-     }
-  .imgC{
-   object-fit: contain;
+  }
+  .imgC {
+    object-fit: contain;
     width: 100%;
     padding: 5px;
     border-radius: 6%;
-    
   }
-  .cardConti{
+  .cardConti {
     width: 250px;
     height: 250px;
-
   }
 }
 
-
-
-@media (min-width: 768px){
-  .cardCateg{
-   display: flex;
-   flex-direction: row;
-   flex-wrap: nowrap;
-    width:37vw;
-  
+@media (min-width: 768px) {
+  .cardCateg {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width: 37vw;
   }
-  .contImgC{
-   
+  .contImgC {
     width: 32vw;
     top: 1vh;
     justify-content: center;
-
   }
-  .imgC{
-   object-fit: contain;
+  .imgC {
+    object-fit: contain;
     width: 100%;
     padding: 5px;
     border-radius: 6%;
   }
 
-  .cardContainC{
+  .cardContainC {
     display: flex;
-   flex-direction: row;
-  justify-content: space-around;
-  flex-shrink: 1;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-shrink: 1;
   }
-  .cardConti{
+  .cardConti {
     width: 235px;
     height: 235px;
-
   }
   .wrapper {
-    height: 40vh;
-    width: 90vw;
+    height: 420px;
+    width: 33vw;
+  }
+  .nombrePlato {
+    font-size: 1.8rem;
+  }
+  .precioPlato {
+    font-size: 2rem;
+    bottom: 17%;
+  }
+  .wrapper .card img {
+    height: 50%;
+  }
+  .wrapper .back-face {
+    font-size: 15px;
   }
 }
-@media (min-width: 1200px){
-  .contImgC{
+@media (min-width: 1200px) {
+  .contImgC {
     align-self: center;
     margin-left: 0.7rem;
-   }
- 
-
+  }
+  .cardConti {
+    width: 250px;
+    height: 250px;
+  }
 
 }
