--- a/src/index.css
+++ b/src/index.css
@@ -242,11 +242,14 @@ overflow: hidden;
 } */
 .cardCont {
   max-height: 70%;
+  padding: 20px;
+  position: absolute;
+  top:-35px;
 }
 .cardCont img {
   width: 90%;
   max-height: 70%;
-  padding: 2px;
+  padding: 20px;
 }
 .nombreCont {
   font-family: "Montserrat";
@@ -366,6 +369,7 @@ overflow: hidden;
     width: 55vw;
     top: 1vh;
     left: 3vw;
+    
   }
   .imgC {
     object-fit: contain;
@@ -423,6 +427,16 @@ overflow: hidden;
   }
   .wrapper .back-face {
     font-size: 15px;
+  }
+  #botonPedStick img{
+    width: 120px;
+    height: 120px;
+  }
+  .imgC{
+    max-height: 60%;
+  }
+  .cardCatBod img{
+    margin-left: 10px;
   }
 }
 @media (min-width: 1200px) {
