Se solucionó el bug que solicita ser administrador para ver la comida en la parte del front

--- a/src/index.css
+++ b/src/index.css
@@ -121,9 +121,19 @@
   background-color: var(--verdeOsc);
   color: white;
   border: none;
-
   bottom: 20px;
   right: 26%;
+}
+.close{
+  background-color: var(--verdeOsc);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 4px 10px;
+
+}
+.sr-only{
+  display: none;
 }
 
 .botonAgrBa {
