--- a/src/index.css
+++ b/src/index.css
@@ -233,7 +233,7 @@
   width: 100%;
   height: 40vh;
   display: block;
-  object-fit: contain;
+  object-fit: fill;
   justify-content: center;
   border-radius: 100%;
   overflow: hidden;
